--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,28 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
+@import '~bootstrap/dist/css/bootstrap.css';
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css');
+@import url('https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css');
 
 @import 'propertise/variabels';
 @import 'propertise/mixins';
 @import 'propertise/helper';
 
-// @import 'components/appbar';
+@import 'components/side-bar';
 // @import 'components/button';
 // @import 'components/restaurant';
 // @import 'components/footer';
 
 @import 'pages/pages-main';
 
-
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  // box-sizing: border-box;
+  // font-family: 'Montserrat', sans-serif;
 }
 
-html {
-  background: white;
-}
+// html {
+//   background: white;
+// }
 
 body {
   width: 100%;
@@ -32,7 +35,7 @@ body {
 }
 
 main {
-  margin: 0 auto;
-  // padding: 64px 0;
+  margin: 0;
+  padding: 0;
+  background-color: $background-very-light-blue;
 }
-
