--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,9 @@
   <main class="container">
     <h1 class="titlePage mb-5 pt-3">Halaman Tips</h1>
 
-    <img src="..//public//images/fitur/fitur-3.png" class="img-fluid" alt="fitur_1_maneyfy">
+    <div class="justify-content-center">
+      <img src="..//public/images/fitur/growth.png" class="img" alt="">
+    </div>
 
     <div class="accordion mb-3" id="accordionPanelsStayOpenExample">
       <div class="accordion-item">
@@ -169,7 +171,7 @@
       </div>
 
     </div>
-    <img src="..//public/images/fitur/growth.png" class="img-fluid" alt="">
+
   </main>
 
   <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
