--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,7 +24,7 @@
       <div class="container-fluid h-custom">
         <div class="row h-100">
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 hero">
             <img src="..//public/images/login.png"
               class="img-fluid" alt="img_maneyfy_login">
           </div>
@@ -52,7 +52,7 @@
                 <label class="form-label" for="form3Example4">Password</label>
               </div>
               
-              <div class="text-center  mt-4 pt-2 justify-content-center">
+              <div class="text-center  mt-1 pt-2 justify-content-center">
                 <button type="button" class="btn btn-primary btn-lg button-login"
                   style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
                   <div class="divider d-flex align-items-center my-4">
