--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,7 +47,7 @@
     
               <!-- Password input -->
               <div class="form-outline mb-3">
-                <input type="password" id="form3Example4" class="form-control form-control-lg"
+                <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
                   placeholder="Enter password" />
                 <label class="form-label" for="form3Example4">Password</label>
               </div>
