delete some file scss and edit features page.

--- a/src/styles/pages/landing/_reDesignFeature.scss
+++ b/src/styles/pages/landing/_reDesignFeature.scss
@@ -56,6 +56,9 @@
 }
 
 @media (max-width: 667px) {
+ .features .feture-tabs {
+  padding-top: 70px;
+ }
  .features .feture-tabs h3 {
    font-size: 28px;
  }
