--- a/src/styles/components/_header-side-bar.scss
+++ b/src/styles/components/_header-side-bar.scss
@@ -33,22 +33,22 @@
       padding: 0.5rem;
       padding-bottom: 3px;
       vertical-align: middle !important;
-      i { 
+      i {
         font-size: 2rem;
-        color: black; 
+        color: black;
       }
     }
     h4 {
       margin-bottom: 0;
     }
   }
-  
+
   .header-right {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     column-gap: 1rem;
-  
+
     .profile-container-ui {
       #dropdownProfile {
         // reset styling button
@@ -58,39 +58,39 @@
         font: inherit;
         cursor: pointer;
         outline: inherit;
-        
-        &:after{
+
+        &:after {
           display: none;
         }
       }
       .dropdown-menu.show {
         transform: translate3d(0px, 70px, 0px) !important;
         position: absolute;
-        min-width: 16rem;  // antisipasi jika nama atau email user pendek
+        min-width: 16rem; // antisipasi jika nama atau email user pendek
         top: 70px;
         border: 2px solid $primary-color;
         padding: 1rem 1rem 0.5rem 1rem;
         border-radius: 10px;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
-      
+
         display: grid;
         grid-template-columns: auto 2fr;
-        grid-template-areas: 
-          "profile-element name-element"
-          "profile-element date-element"
-          "content-element content-element";
-      
-        &:after{
-          content:"";
+        grid-template-areas:
+          'profile-element name-element'
+          'profile-element date-element'
+          'content-element content-element';
+
+        &:after {
+          content: '';
           position: absolute;
-          top:-32px;
-          right:calc(0% + 5px);
-          border-top:15px solid transparent;
-          border-right:15px solid transparent;
-          border-bottom:15px solid $primary-color;
-          border-left:15px solid transparent;
+          top: -32px;
+          right: calc(0% + 5px);
+          border-top: 15px solid transparent;
+          border-right: 15px solid transparent;
+          border-bottom: 15px solid $primary-color;
+          border-left: 15px solid transparent;
         }
-      
+
         .profile__image {
           grid-area: profile-element;
           width: 50px;
@@ -98,14 +98,14 @@
           height: auto;
           margin-right: 0.8rem;
         }
-      
+
         .profile__name {
           grid-area: name-element;
           align-self: end;
           line-height: 1.2; // antisipasi jika nama user panjang
           margin: 0;
         }
-        
+
         .profile__email {
           font-size: 0.8rem;
           grid-area: date-element;
@@ -113,7 +113,7 @@
           margin: 0;
           margin-top: 4px;
         }
-      
+
         .profile__link {
           grid-area: content-element;
           padding: 10px 0;
@@ -123,12 +123,12 @@
         }
       }
     }
-  
+
     .profile-picture {
       width: 45px;
       border-radius: 50%;
     }
-  
+
     .wallet-container {
       background-color: $background-wallet;
       border-radius: 0.5rem;
@@ -143,7 +143,7 @@
         cursor: pointer;
         outline: inherit;
       }
-  
+
       .dropdown-menu.show {
         transform: translate3d(-12px, 70px, 0px) !important;
         position: absolute;
@@ -151,18 +151,18 @@
         background-color: $background-wallet;
         color: white;
         font-weight: 600;
-      
-        &:after{
-          content:"";
+
+        &:after {
+          content: '';
           position: absolute;
-          top:-30px;
-          left:calc(50% - 10px);
-          border-top:15px solid transparent;
-          border-right:15px solid transparent;
-          border-bottom:15px solid $background-wallet;
-          border-left:15px solid transparent;
+          top: -30px;
+          left: calc(50% - 10px);
+          border-top: 15px solid transparent;
+          border-right: 15px solid transparent;
+          border-bottom: 15px solid $background-wallet;
+          border-left: 15px solid transparent;
         }
-      
+
         .container {
           display: block;
           position: relative;
@@ -174,13 +174,13 @@
           -ms-user-select: none;
           user-select: none;
         }
-        
+
         .container input {
           position: absolute;
           opacity: 0;
           cursor: pointer;
         }
-        
+
         .checkmark {
           position: absolute;
           top: 11px;
@@ -190,23 +190,23 @@
           border: 2px solid white;
           border-radius: 50%;
         }
-        
+
         .container:hover input ~ .checkmark {
           background-color: #ccc;
         }
-        
+
         .checkmark:after {
-          content: "";
+          content: '';
           position: absolute;
           display: none;
         }
-        
+
         .container input:checked ~ .checkmark:after {
           display: block;
         }
-        
+
         .container .checkmark:after {
-           top: 3px;
+          top: 3px;
           left: 3px;
           width: 10px;
           height: 10px;
@@ -214,7 +214,7 @@
           background-color: white;
         }
       }
-  
+
       a {
         font-size: 14px;
         display: flex;
@@ -227,7 +227,6 @@
     }
   }
 }
-
 
 // SIDE BAR //
 
@@ -282,7 +281,8 @@
       }
     }
 
-    .nav_link, .nav_logout {
+    .nav_link,
+    .nav_logout {
       position: relative;
       color: black;
       margin-bottom: 1rem;
@@ -334,4 +334,3 @@
   background-color: $icon-active-background;
   border-radius: 1rem;
 }
-
