--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -103,7 +103,7 @@
           </div>  
           <div class="col-lg-6 content">
             <h3>Ubah kebiasaan buruk dalam mengatur keuangan</h3>
-            <p>Kamu dapat mengelompokkan pencatatan berdasarkan kategori. Selain itu kamu juga dapat menambahkan kategori baru sesuai kebutuhanmu</p>
+            <p>Maneyfy dapat memberikan kamu tips dan saran, sehingga membantu kamu tetap konsisten dalam mengelola keuangan</p>
           </div>
         </div> <!-- End Feature 4 -->
 
