--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,69 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Description" content="Maneyfy, Manage your Money Easily">
-
     <title>Maneyfy | Manage your Money Easily</title>
     <link rel="manifest" href="./manifest.json">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
     <!-- IMPORT ICON -->
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
-  
-  <body>
 
-
-
-    <section class="vh-100">
-      <div class="container-fluid h-custom">
-        <div class="row h-100">
-
-          <div class="col-lg-6 hero">
-            <img src="..//public/images/login.png"
-              class="img-fluid" alt="img_maneyfy_login">
-          </div>
-          <div class="col-lg-6 form-input">
-            <form>
-              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-center head">
-                <img class="img-fluid logo" src="..//public/images/logo-title-black.png" alt="">
-              </div>
-    
-              <div class="divider d-flex align-items-center my-4">
-                <p class="text-center fw-bold mx-3 mb-0">MASUK</p>
-              </div>
-              
-              <!-- Email input -->
-              <div class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control form-control-lg"
-                  placeholder="Enter a valid email address" />
-                <label class="form-label" for="form3Example3">Email address</label>
-              </div>
-    
-              <!-- Password input -->
-              <div class="form-outline mb-3">
-                <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
-                  placeholder="Enter password" />
-                <label class="form-label" for="form3Example4">Password</label>
-              </div>
-              
-              <div class="text-center  mt-1 pt-2 justify-content-center">
-                <button type="button" class="btn btn-primary btn-lg button-login"
-                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                  <div class="divider d-flex align-items-center my-4">
-                    <p class="text-center fw-bold mx-3 mb-0">BELUM PUNYA AKUN ?</p>
-                  </div>
-                <button type="button" class="btn btn-primary btn-lg button-register"
-                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
-              </div>
-              
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-  </body>
-
+  <body id="mainContent"></body>
   
 </html>
