convert code to web component and fix styling

--- a/src/styles/pages/_pages-main.scss
+++ b/src/styles/pages/_pages-main.scss
@@ -1,6 +1,9 @@
 // // Landing Page
-// @import 'landing/';
-// @import 'landing/';
+@import 'landing/footer';
+@import 'landing/reDesignAppBar';
+@import 'landing/reDesignDaftar';
+@import 'landing/reDesignFeature';
+@import 'landing/reDesignHero';
 
 // // Dashboard Page
 // @import 'dashboard/';
