--- a/src/styles/pages/landing/_reDesignAppBar.scss
+++ b/src/styles/pages/landing/_reDesignAppBar.scss
@@ -4,7 +4,7 @@
 .header {
  transition: all 0.5s;
  z-index: 997;
- padding: 10px 0;
+ padding: 10px;
  background-color: #EEF7FF;
 }
 
@@ -20,7 +20,6 @@
 
 .header .logo img {
  height: 60px;
- // margin-right: 6px;
 }
 
 
