--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,129 +14,5 @@
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
-  <body class="" id="mainContent" tabindex="0">
-    <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="..//public/images/logo-title-black.png" alt="">
-        <!-- <span>FlexStart</span> -->
-      </a>
-      <nav id="navbar" class="navbar">  
-        <a class="getstarted scrollto" href="#about">Login</a>
-      </nav><!-- .navbar -->
-    </div>
-  </header><!-- End Header -->
-    
-    
-    <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex align-items-center">
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Kelola keuanganmu<br>Dalam satu tempat</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Merekap, Melacak, Mengontrol, hingga mengubah kebiasaan dalam mengelola keuangan dengan Maneyfy</h2>
-          <div data-aos="fade-up" data-aos-delay="600">
-            <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                <span>Pelajari</span>
-                <i class="bi bi-arrow-right"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="..//public/images/heros/hero-large.png" class="img-fluid" alt="">
-        </div>
-      </div>
-    </div>
-
-  </section><!-- End Hero -->
-
-    <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
-
-      <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h1>Kenapa Pilih Maneyfy ?</h1>
-        </header>
-
-        <!-- Feature 1 -->
-        <div class="row feture-tabs" data-aos="fade-up">
-          <div class="col-lg-6 content">
-            <h3>Tambahkan dompet sesukamu</h3>
-            <p>Kamu bisa menambahkan dompet tanpa batas untuk memisahkan setiap kebutuhanmu</p>
-          </div>
-          <div class="col-lg-6">
-            <img src="..//public//images/fitur/fitur-1.png" class="img-fluid image-features" alt="fitur_1_maneyfy">
-          </div>
-        </div> <!-- End Feature 1 -->
-
-        <!-- Feature 2 -->
-        <div class="row feture-tabs reverse" data-aos="fade-up">
-          <div class="col-lg-6">
-            <img src="..//public//images/fitur/fitur-2.png" class="img-fluid" alt="fitur_1_maneyfy">
-          </div>
-          <div class="col-lg-6 content">
-            <h3>Lihat laporan pencatatan dengan mudah</h3>
-            <p>Riwayat pencatatan didesain agar kamu dapat mengetahui laporan pencatatan dengan mudah setiap bulannya</p>
-          </div>
-        </div> <!-- End Feature 2 -->
-
-        <!-- Feature 3 -->
-        <div class="row feture-tabs" data-aos="fade-up">
-          <div class="col-lg-6 content">
-            <h3>Kategori membantumu lebih fokus</h3>
-            <p>Kamu dapat mengelompokkan pencatatan berdasarkan kategori. Selain itu kamu juga dapat menambahkan kategori baru sesuai kebutuhanmu</p>
-          </div>
-          <div class="col-lg-6">
-            <img src="..//public//images/fitur/fitur-3.png" class="img-fluid" alt="fitur_1_maneyfy">
-          </div>
-        </div> <!-- End Feature 3 -->
-
-        <!-- Feature 4 -->
-        <div class="row feture-tabs reverse" data-aos="fade-up">
-          <div class="col-lg-6">
-            <img src="..//public//images/fitur/fitur-4.png" class="img-fluid" alt="fitur_1_maneyfy">
-          </div>  
-          <div class="col-lg-6 content">
-            <h3>Ubah kebiasaan buruk dalam mengatur keuangan</h3>
-            <p>Maneyfy dapat memberikan kamu tips dan saran, sehingga membantu kamu tetap konsisten dalam mengelola keuangan</p>
-          </div>
-        </div> <!-- End Feature 4 -->
-
-      </div>
-
-    </section><!-- End Features Section -->
-
-    <div class="daftar d-flex align-items-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">Nikmati kemudahan dalam<br>melakukan pencatatan<br>keuangan bersama<br>Maneyfy</h1>
-            <div data-aos="fade-up" data-aos-delay="600">
-              <div class="text-center text-lg-start">
-                <a href="#about" class="btn-get-register scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                  <span>Daftar </span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 daftar-img" data-aos="zoom-out" data-aos-delay="200">
-            <img src="..//public/images/fitur/growth.png" class="img-fluid" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    
-    
-      <footer>
-        <p><a href="#">Copyright 2022 - Maneyfy </p>
-      </footer>
-  
-  </body>
+  <body id="body-pd" tabindex="0"></body>
 </html>
