--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,41 +1,24 @@
-// @import 'bootstrap';
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css');
+@import '~bootstrap/dist/css/bootstrap.css';
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+@import "propertise/variabels";
+@import "propertise/mixins";
+@import "propertise/helper";
 
+@import "components/button";
 
-@import 'propertise/variabels';
-@import 'propertise/mixins';
-@import 'propertise/helper';
-
-// @import 'pages/landing/appbar';
-// @import 'pages/landing/hero';
-// @import 'pages/landing/fiturImageRight';
-// @import 'pages/landing/daftarSekarang';
-@import 'pages/landing/footer';
-@import 'components/button';
-// re design hero
-@import 'pages/landing/reDesignHero';
-// re design appbar
-@import 'pages/landing/reDesignAppBar';
-//re design feature
-@import 'pages/landing/reDesignFeature';
-//re design daftar
-@import 'pages/landing/reDesignDaftar';
-
-@import 'pages/pages-main';
-
+@import "pages/pages-main";
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 html {
-  background: #EEF7FF;
+  background: #eef7ff;
 }
 
 body {
@@ -48,6 +31,4 @@ body {
 
 main {
   margin: 0 auto;
-  // padding: 64px 0;
 }
-
