--- a/src/styles/pages/landing/_footer.scss
+++ b/src/styles/pages/landing/_footer.scss
@@ -2,22 +2,22 @@
    Footer
  */
 
- footer {
+footer {
   margin-top: 7rem;
-  padding: 16px;
+  padding: 0 16px;
   background-color: white;
- }
- 
- footer p {
-  text-align: center;
-  color: #ffffff;
- }
- 
- footer p a {
-  color:#404040 ;
-  display: inline-block;
-  font-weight: 700;
-   // min-width: 44px;
-   // min-height: 44px;
-  text-decoration: none;
- }
+
+  p {
+    margin: auto 0;
+    text-align: center;
+    color: #ffffff;
+
+    a {
+      padding: 16px 0;
+      color:#404040 ;
+      display: inline-block;
+      font-weight: 700;
+      text-decoration: none;
+    }
+  }
+}
