--- a/src/styles/pages/landing/_reDesignDaftar.scss
+++ b/src/styles/pages/landing/_reDesignDaftar.scss
@@ -25,7 +25,6 @@
  text-decoration: none;
  color: #fff;
  background: #42B2FA;
- //
  box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 
@@ -56,7 +55,8 @@
 @media (max-width: 991px) {
  .daftar {
   height: auto;
-  padding: 120px 0 60px 0;
+  margin-top: 5rem;
+  padding: 120px 1.5rem 60px 1rem;
  }
  .daftar .daftar-img {
   text-align: center;
