--- a/src/styles/pages/landing/_reDesignFeature.scss
+++ b/src/styles/pages/landing/_reDesignFeature.scss
@@ -13,7 +13,12 @@
 .content {
  text-align: left;
  justify-content: left;
- padding-top: 250px;
+//  padding-top: 250px;
+ margin: auto 0;
+}
+
+.content p {
+  font-size: 1.2rem;
 }
 
 .section-header {
@@ -23,6 +28,8 @@
  font-weight: 700;
 }
 .features {
+  padding-left: 1rem;
+  padding-right: 1.5rem;
  background-color: #fff;
  padding-top: 40px;
  text-align: center;
@@ -55,24 +62,22 @@
  margin-bottom: 10px;
 }
 
-@media (max-width: 667px) {
- .features .feture-tabs {
-  padding-top: 70px;
- }
- .features .feture-tabs h3 {
-   font-size: 28px;
- }
- .features .feture-tabs .content{
-   padding-top: 0px;
-   text-align: center;
-   justify-content: center;
- }
- .features .container {
-   padding: 8px;
- }
-}
+@media (max-width: 991px) {
+   .features .feture-tabs {
+    padding-top: 70px;
+   }
+   .features .feture-tabs h3 {
+     font-size: 28px;
+   }
+   .features .feture-tabs .content{
+     padding-top: 0px;
+     text-align: center;
+     justify-content: center;
+   }
+   .features .container {
+     padding: 8px;
+   }
 
-@media (max-width: 768px) {
   .reverse {
     display: flex;
     flex-direction: column-reverse;
