--- a/src/styles/pages/landing/_reDesignHero.scss
+++ b/src/styles/pages/landing/_reDesignHero.scss
@@ -4,7 +4,6 @@
 .hero {
  width: 100%;
  height: 100vh;
- // background: url(../../../public/images/heros/hero-large.png) top center no-repeat;
  background-size: cover;
 }
 
@@ -32,7 +31,6 @@
  text-decoration: none;
  color: #fff;
  background: #42B2FA;
- //
  box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 
@@ -65,7 +63,7 @@
 @media (max-width: 991px) {
  .hero {
    height: auto;
-   padding: 120px 0 60px 0;
+   padding: 120px 1.5rem 60px 1rem;
  }
 
  .hero .hero-img {
