fix header and add tips

--- a/src/styles/components/_header-side-bar.scss
+++ b/src/styles/components/_header-side-bar.scss
@@ -142,6 +142,14 @@
         border: none;
         cursor: pointer;
         outline: inherit;
+
+        .dompet-list {
+          display: none;
+
+          @include media-in(tablet) {
+            display: contents;
+          }
+        }
       }
 
       .dropdown-menu.show {
@@ -235,7 +243,7 @@
   top: 0;
   left: -30%;
   margin: 0;
-  width: var(--nav-width);
+  width: calc(var(--nav-width) - 1rem);
   height: 100vh;
   background-color: white;
   padding: 0.5rem 0.5rem;
@@ -245,6 +253,7 @@
   @include media-in(tablet) {
     left: 0;
     padding: 1rem 1rem;
+    width: var(--nav-width);
   }
 
   .nav {
