--- a/src/styles/pages/_pages-main.scss
+++ b/src/styles/pages/_pages-main.scss
@@ -5,7 +5,7 @@
 
 // Dashboard Page
 @import 'dashboard/dashboard-page';
-// @import 'dashboard/';
+@import 'tips/tips-page';
 
 // // Login-Register Page
 // @import 'loginRegister/';
@@ -18,7 +18,6 @@
 // // Tips Page
 // @import 'tips/';
 // @import 'tips/';
-
 
 :root {
   --header-height: 4rem; // = 64px
