--- a/src/styles/pages/landing/_reDesignAppBar.scss
+++ b/src/styles/pages/landing/_reDesignAppBar.scss
@@ -1,24 +1,24 @@
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-.header {
+.header-landing {
  transition: all 0.5s;
  z-index: 997;
  padding: 10px;
  background-color: #EEF7FF;
 }
 
-.header.header-scrolled {
+.header-landing.header-landing-scrolled {
  background: #ffff;
  padding: 15px 0;
  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
 }
 
-.header .logo {
+.header-landing .logo {
  line-height: 0;
 }
 
-.header .logo img {
+.header-landing .logo img {
  height: 60px;
 }
 
