--- a/src/styles/propertise/_variabels.scss
+++ b/src/styles/propertise/_variabels.scss
@@ -7,7 +7,7 @@ $breakpoint: (
 );
 
 // COLOR //
-$primary-color: #42B2FA;
+$primary-color: #42b2fa;
 
 $font-color-grey: #404040;
 
@@ -15,12 +15,13 @@ $background-very-light-blue: #eff7ff;
 $background-light-blue: #accbec;
 
 $icon-active: #0093ed;
-$icon-active-background: #D4EEFF;
+$icon-active-background: #d4eeff;
 
-$background-wallet: #709FB9;
+$background-wallet: #709fb9;
 $background-logout: #c75957;
 
 $background-font-income: #3bab96;
+$background-amount-wallet: #779eb8;
 $background-font-outcome: #d56e57;
 
 $background-dropdown-month: #d0e3ee;
