fix register page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,10 +5,8 @@
 @import 'propertise/mixins';
 @import 'propertise/helper';
 
-// @import 'components/appbar';
-// @import 'components/button';
-// @import 'components/restaurant';
-// @import 'components/footer';
+@import 'pages/register/register';
+
 
 @import 'pages/pages-main';
 
