--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,21 +8,70 @@
 
     <title>Maneyfy | Manage your Money Easily</title>
     <link rel="manifest" href="./manifest.json">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!-- IMPORT ICON -->
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   </head>
   
   <body>
-    <skip-link-element></skip-link-element>
-    <header>      
-      <app-bar></app-bar>
-    </header>
+    <div class="vh-100">
+      <div class="container-fluid h-custom">
+        <div class="row h-100">
 
-    <main id="mainContent" tabindex="0"></main>
+          <div class="col-lg-6 form-input">
+            <form>
+              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-center head">
+                <img class="img-fluid logo" src="..//public/images/logo-title-black.png" alt="">
+              </div>
+    
+              <div class="divider d-flex align-items-center my-4">
+                <p class="text-center fw-bold mx-3 mb-0">MASUK</p>
+              </div>
+              
+              <!-- Email input -->
+              <div class="form-outline mb-3">
+                <input type="email" id="form3Example3" class="form-control form-control-lg"
+                  placeholder="Enter a valid email address" />
+                
+              </div>
 
-    <footer>
-      <footer-element></footer-element>
-    </footer>
+              <div class="form-outline mb-3">
+                <input type="text" id="form3Example3" class="form-control form-control-lg"
+                  placeholder="Enter a valid email address" />
+              </div>
+    
+              <!-- Password input -->
+              <div class="form-outline mb-3">
+                <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
+                  placeholder="Enter password" />
+              </div>
+
+              <div class="form-outline mb-3">
+                <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
+                  placeholder="Enter password" />
+              </div>
+              
+              <div class="text-center  mt-1 pt-2 justify-content-center">
+                <button type="button" class="btn btn-primary btn-lg button-login"
+                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                  <div class="divider d-flex align-items-center my-4">
+                    <p class="text-center fw-bold mx-3 mb-0">BELUM PUNYA AKUN ?</p>
+                  </div>
+                <button type="button" class="btn btn-primary btn-lg button-register"
+                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
+              </div>
+              
+            </form>
+          </div>
+
+          <div class="col-lg-6 hero">
+            <img src="..//public/images/hero-register.png"
+              class="img-fluid" alt="img_maneyfy_login">
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
