edit placeholder input

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,26 +31,26 @@
               </div>
               
               <!-- Email input -->
-              <div class="form-outline mb-3">
+              <div class="form-outline mb-4">
                 <input type="email" id="form3Example3" class="form-control form-control-lg"
-                  placeholder="Enter a valid email address" />
+                  placeholder="Name" />
                 
               </div>
 
-              <div class="form-outline mb-3">
+              <div class="form-outline mb-4">
                 <input type="text" id="form3Example3" class="form-control form-control-lg"
-                  placeholder="Enter a valid email address" />
+                  placeholder="Email" />
               </div>
     
               <!-- Password input -->
-              <div class="form-outline mb-3">
+              <div class="form-outline mb-4">
                 <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
-                  placeholder="Enter password" />
+                  placeholder="Password" />
               </div>
 
-              <div class="form-outline mb-3">
+              <div class="form-outline mb-4">
                 <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
-                  placeholder="Enter password" />
+                  placeholder="Konfirmasi Password" />
               </div>
               
               <div class="text-center  mt-1 pt-2 justify-content-center">
