--- a/src/styles/pages/_pages-main.scss
+++ b/src/styles/pages/_pages-main.scss
@@ -7,7 +7,7 @@
 // @import 'dashboard/';
 
 // // Login-Register Page
-// @import 'loginRegister/';
+@import 'loginRegister/login';
 // @import 'loginRegister/';
 
 // // Profile Page
