edit for prepare merge register-page

--- a/src/styles/pages/_pages-main.scss
+++ b/src/styles/pages/_pages-main.scss
@@ -11,7 +11,7 @@
 // @import 'dashboard/';
 
 // // Login-Register Page
-@import 'loginRegister/login';
+@import 'loginRegister/login-register';
 // @import 'loginRegister/';
 
 // // Profile Page
