--- a/src/styles/pages/loginRegister/_login-register.scss
+++ b/src/styles/pages/loginRegister/_login-register.scss
@@ -9,7 +9,7 @@ background: #eee;
 .head {
   padding-top: 70px;
 }
-.logo-login {
+.logo-login-register {
  height: 100px;
 }
 
@@ -28,8 +28,7 @@ form {
  margin-left: 120px;
 }
 
-.button-login {
- font-family: "Montserrat", sans-serif;
+.button-filled {
  font-weight: 700;
  margin-bottom: 30px;
  line-height: 0;
@@ -47,8 +46,7 @@ form {
  padding-right: 2.5rem;
 }
 
-.button-register {
- font-family: "Montserrat", sans-serif;
+.button-outline {
  font-weight: 700;
  line-height: 0;
  width: 200px;
@@ -71,7 +69,7 @@ form {
   margin: auto 0;
 }
 
-.hero-login {
+.hero-login-register {
   background: white !important;
   display: flex;
   align-items: center;
@@ -83,7 +81,7 @@ form {
  }
 
  @media (max-width: 991px) {
-  .hero-login {
+  .hero-login-register {
     display: none;
    }
 }
