--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,36 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import '~bootstrap/dist/css/bootstrap.css';
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
+@import "propertise/variabels";
+@import "propertise/mixins";
+@import "propertise/helper";
 
-@import 'propertise/variabels';
-@import 'propertise/mixins';
-@import 'propertise/helper';
-
-@import 'pages/register/register';
-
-
-@import 'pages/pages-main';
+@import "pages/pages-main";
 
 
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
-}
-
-html {
-  background: white;
 }
 
 body {
   width: 100%;
   scroll-behavior: smooth;
   position: relative;
-  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
 }
 
-main {
+.main-landing {
   margin: 0 auto;
-  // padding: 64px 0;
+  background-color: $background-landing;
+}
+
+.main-logged-in {
+  margin: 0;
+  padding: 0;
+  background-color: $background-very-light-blue;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
 }
 
