--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,70 +8,14 @@
 
     <title>Maneyfy | Manage your Money Easily</title>
     <link rel="manifest" href="./manifest.json">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
     <!-- IMPORT ICON -->
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
+  
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
   </head>
   
-  <body>
-    <div class="vh-100">
-      <div class="container-fluid h-custom">
-        <div class="row h-100">
-
-          <div class="col-lg-6 form-input">
-            <form>
-              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-center head">
-                <img class="img-fluid logo" src="..//public/images/logo-title-black.png" alt="">
-              </div>
-    
-              <div class="divider d-flex align-items-center my-4">
-                <p class="text-center fw-bold mx-3 mb-0">MASUK</p>
-              </div>
-              
-              <!-- Email input -->
-              <div class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control form-control-lg"
-                  placeholder="Name" />
-                
-              </div>
-
-              <div class="form-outline mb-4">
-                <input type="text" id="form3Example3" class="form-control form-control-lg"
-                  placeholder="Email" />
-              </div>
-    
-              <!-- Password input -->
-              <div class="form-outline mb-4">
-                <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
-                  placeholder="Password" />
-              </div>
-
-              <div class="form-outline mb-4">
-                <input type="password" for="typePassword" id="form3Example4" class="form-control form-control-lg"
-                  placeholder="Konfirmasi Password" />
-              </div>
-              
-              <div class="text-center  mt-1 pt-2 justify-content-center">
-                <button type="button" class="btn btn-primary btn-lg button-login"
-                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                  <div class="divider d-flex align-items-center my-4">
-                    <p class="text-center fw-bold mx-3 mb-0">BELUM PUNYA AKUN ?</p>
-                  </div>
-                <button type="button" class="btn btn-primary btn-lg button-register"
-                  style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
-              </div>
-              
-            </form>
-          </div>
-
-          <div class="col-lg-6 hero">
-            <img src="..//public/images/hero-register.png"
-              class="img-fluid" alt="img_maneyfy_login">
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body id="body-pd" tabindex="0"></body>
 </html>
