--- a/src/styles/pages/profile/_profile.scss
+++ b/src/styles/pages/profile/_profile.scss
@@ -12,37 +12,63 @@ body {
 
 .profil {
   background-color: #ffff;
-  align-items: flex-end;
+  align-items: center;
   padding: 0.8rem;
+  padding-top: 6rem;
   border-radius: 35px;
   background-image: url('/src/public/images/backgroundProfil.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 10rem;
+  height: 12rem;
   margin: 0 1rem;
-  justify-content: center;
 
   @include media-in(mobile) {
-    height: 16rem;
-    justify-content: flex-start;
+    height: 18rem;
+    // justify-content: flex-start;
     margin: 0 1.2rem;
   }
 
-  .name {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 0;
-
-    @include media-in(mobile) {
-      font-size: 1.5rem;
-    }
+  .foto {
+    text-align: center;
+    justify-content: center;
   }
-  .email {
-    font-size: 0.8rem;
+
+  .desc {
+    .name {
+      font-size: 1rem;
+      font-weight: bold;
+      margin-bottom: 0;
+
+      @include media-in(mobile) {
+        font-size: 1.5rem;
+      }
+    }
+    .email {
+      font-size: 0.8rem;
+      margin-bottom: 0;
+
+      @include media-in(mobile) {
+        font-size: 1rem;
+      }
+    }
+    .edit {
+      // width: 100%;
+      // height: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      background-color: aqua;
+      iconify-icon {
+        width: 2rem;
+        height: 2rem;
+        justify-content: flex-end;
+        align-items: center;
+      }
+    }
 
     @include media-in(mobile) {
-      font-size: 1rem;
+      // height: 2rem;
     }
   }
 }
@@ -58,8 +84,12 @@ body {
     // color: #ffff;
     font-size: 0.8rem;
     font-weight: bold;
-    max-width: max-content;
     background-color: transparent;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     @include media-in(tablet) {
       font-size: 1.5rem;
@@ -72,35 +102,47 @@ body {
     .button {
       justify-content: end;
       display: flex;
-      .like {
-        display: flex;
-        width: 55px;
-        height: 55px;
-        align-items: center;
-        justify-content: center;
-        background-color: $primary-color;
-        border-radius: 50%;
-        border: 0;
-        margin-top: 1rem;
-
-        p {
-          margin: 0;
-          font-size: 3rem;
-        }
-      }
     }
   }
   .dompet {
     background-color: $background-amount-wallet;
     padding: 1em;
     border-radius: 20px;
+    .button {
+      justify-content: end;
+      display: flex;
+    }
   }
   .pengeluaran {
     background-color: $background-font-outcome;
     padding: 1em;
     border-radius: 20px;
+    .button {
+      justify-content: end;
+      display: flex;
+    }
   }
   .modal-content {
     background-color: #eef7ff;
   }
+  .like {
+    display: flex;
+    width: 55px;
+    height: 55px;
+    align-items: center;
+    justify-content: center;
+    background-color: $primary-color;
+    border-radius: 50%;
+    border: 0;
+    margin-top: 1rem;
+
+    p {
+      margin: 0;
+      font-size: 3rem;
+    }
+  }
+}
+
+.logo {
+  height: 4rem;
 }
