--- a/src/styles/pages/profile/_profile.scss
+++ b/src/styles/pages/profile/_profile.scss
@@ -24,8 +24,15 @@ body {
   margin: 0 1rem;
 
   @include media-in(mobile) {
+    height: 15rem;
+  }
+
+  @include media-in(tablet) {
+    height: 17rem;
+  }
+
+  @include media-in(desktop) {
     height: 18rem;
-    // justify-content: flex-start;
     margin: 0 1.2rem;
   }
 
@@ -35,10 +42,15 @@ body {
   }
 
   .desc {
+    // padding-top: 0.5rem;
     .name {
       font-size: 1rem;
       font-weight: bold;
       margin-bottom: 0;
+      display: -webkit-box;
+      --webkit-line-clamp: 1;
+      --webkit-box-orient: vertical;
+      overflow: hidden;
 
       @include media-in(mobile) {
         font-size: 1.5rem;
@@ -53,22 +65,16 @@ body {
       }
     }
     .edit {
-      // width: 100%;
-      // height: 100%;
+      width: 44px;
+      height: 44px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      background-color: aqua;
-      iconify-icon {
-        width: 2rem;
-        height: 2rem;
-        justify-content: flex-end;
-        align-items: center;
-      }
+      // background-color: aqua;
     }
 
-    @include media-in(mobile) {
-      // height: 2rem;
+    @include media-in(desktop) {
+      padding-top: 3rem;
     }
   }
 }
@@ -86,13 +92,14 @@ body {
     font-weight: bold;
     background-color: transparent;
     width: 100%;
-    height: 100%;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
 
     @include media-in(tablet) {
       font-size: 1.5rem;
+      height: 100%;
     }
   }
   .pemasukan {
@@ -145,4 +152,15 @@ body {
 
 .logo {
   height: 4rem;
+}
+
+#uploadBtn {
+  cursor: grab;
+}
+
+#photo {
+  height: 10rem;
+  width: 10rem;
+  border-radius: 50%;
+  object-fit: cover;
 }
