fix some bug. but not yet responsive for mobile

--- a/src/templates/index copy.html
+++ b/src/templates/index copy.html
@@ -25,7 +25,7 @@
   
             <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
               <div class="count-box-pemasukan">
-                <p><strong>Pemasukan</strong></p>
+                <p class="category-title"><strong>Pemasukan</strong></p>
                 <img class="category-icon" src="..//public/icons/income.png" alt="">
                 <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 123.000.000</span>
                 <!-- <a href="#">Find out more &raquo;</a> -->
