--- a/src/styles/components/_kategoriList.scss
+++ b/src/styles/components/_kategoriList.scss
@@ -50,7 +50,7 @@
  height: 55px;
 }
 
-span {
+.purecounter {
  font-size: 30px;
  margin-top: 4px;
  display: block;
@@ -61,7 +61,7 @@ span {
  margin-left: 60px;
 }
 
-p {
+.category-title{
  padding: 0 0 0 0;
  margin: 0;
  color: #fff;
