--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,7 +25,7 @@
   
             <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
               <div class="count-box-pemasukan">
-                <p><strong>Pemasukan</strong></p>
+                <p class="category-title"><strong>Pemasukan</strong></p>
                 <img class="category-icon" src="..//public/icons/income.png" alt="">
                 <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 123.000.000</span>
                 <!-- <a href="#">Find out more &raquo;</a> -->
@@ -34,7 +34,7 @@
   
             <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
               <div class="count-box-saldo">
-                <p><strong>Saldo Dompet</strong></p>
+                <p class="category-title"><strong>Saldo Dompet</strong></p>
                 <img class="category-icon" src="..//public/icons/wallet.png" alt="">
                 <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 123.000.000</span>
                 <!-- <a href="#">Find out more &raquo;</a> -->
@@ -43,7 +43,7 @@
   
             <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
               <div class="count-box-pengeluaran">
-                <p><strong>Pengeluaran</strong></p>
+                <p class="category-title"><strong>Pengeluaran</strong></p>
                 <img class="category-icon" src="..//public/icons/spend.png" alt="">
                 <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter">Rp. 123.000.000</span>
                 <!-- <a href="#">Find out more &raquo;</a> -->
